# discovery-engine

./: DESIGN.md  LICENSE  README.md  processed_papers.jsonl  pyproject.toml
.github/workflows/: post-merge.yml  sync-to-hf.yml  update-paper-index.yml  validate-submission.yml
discovery/: __init__.py  cli.py  config.py  discover.py  extract.py  normalize.py  quality_gate.py  run.py  sources.py  submit.py  validate.py
docs/: CONTRIBUTING.md
honeypots/: README.md
results/: arxiv__cond-mat_9307047.json
scripts/: test_quality.py  update_paper_index.py
skills/discovery-extract/: SKILL.md  clawhub.json
skills/discovery-extract/references/: prompt.txt  schema.json
skills/discovery-extract/scripts/: extract.py
submissions/: arxiv__cond-mat_0207642.json  arxiv__math-ph_9909017.json  pmc__12975005.json
